<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/wapiRegistration"
    tools:context=".view.activity.VerificationActivity">

    <TextView
        android:id="@+id/verify_account_title"
        android:layout_width="match_parent"
        android:textAppearance="@style/wapiHeader"
        android:layout_height="wrap_content"
        android:text="@string/verification_title"
        android:layout_marginTop="@dimen/wapi_element_margin"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:textAppearance="@style/wapiText"
        android:layout_height="wrap_content"
        android:id="@+id/otp_label"
        android:text="@string/verification_title"
        android:textAlignment="center"
        android:layout_below="@+id/verify_account_title"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/verification_code"
        style="@style/wapiEditText"
        android:textSize="30sp"
        android:inputType="number"
        android:maxLength="6"
        android:layout_marginTop="30dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/otp_label"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:gravity="end"
         />

    <TextView
        android:id="@+id/verification_code_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_6_digit_code"
        android:textAppearance="@style/wapiText"
        android:textAlignment="center"
        android:layout_marginTop="6dp"
        android:layout_below="@id/verification_code"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/wapiErrorText"
        android:id="@+id/error_message"
        android:textAlignment="center"
        android:layout_below="@id/verification_code"
        android:layout_centerHorizontal="true"
        />

    <Button
        android:id="@+id/verify_btn"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verification_code"
        android:text="@string/btn_verify"
        />

    <Button
            android:id="@+id/resend_sms"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:drawableLeft="@drawable/ic_message_24dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/verify_btn"
            android:text="@string/bt_resend_sms"
            android:drawableStart="@drawable/ic_message_24dp" />

</RelativeLayout>
