<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/wapiRegistration"
    tools:context=".view.activity.RegistrationActivity">


    <TextView
        android:layout_width="match_parent"
        android:textAppearance="@style/wapiHeader"
        android:layout_height="wrap_content"
        android:id="@+id/create_account_title"
        android:text="@string/create_account_title"
        android:layout_marginTop="@dimen/wapi_element_margin"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:textAppearance="@style/wapiText"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="@dimen/wapi_element_margin"
        android:id="@+id/create_account_description"
        android:text="@string/create_account_description"
        android:layout_below="@+id/create_account_title"
        />

    <TextView
        android:id="@+id/selected_country_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:drawableRight="@drawable/ic_arrow_drop_down_24dp"
        style="@style/wapiEditText"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/wapi_element_margin"
        android:text="@string/select_country"
        android:layout_below="@+id/create_account_description"
        android:drawableEnd="@drawable/ic_arrow_drop_down_24dp" />
    <LinearLayout
        android:id="@+id/select_phone_number_layout"
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="horizontal"
        android:layout_below="@+id/selected_country_name"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/selected_country_calling_code"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:textAlignment="textEnd"
            android:drawableLeft="@drawable/ic_add_12dp"
            style="@style/wapiEditText"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/wapi_element_margin"
            android:drawableStart="@drawable/ic_add_12dp" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:inputType="phone"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textAlignment="textStart"
            style="@style/wapiEditText"
            android:layout_weight="3"
            android:hint="@string/phone_number"
            android:layout_marginTop="@dimen/wapi_element_margin"
            android:layout_marginStart="10dp" />
    </LinearLayout>

    <Button
        android:id="@+id/register_btn"
        android:layout_centerHorizontal="true"
        style="@style/wapiBtn"
        android:layout_marginTop="20dp"
        android:text="@string/btn_next"
        android:layout_below="@+id/select_phone_number_layout"
        android:layout_width="wrap_content"
        android:layout_height="40dp" />

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:textAppearance="@style/wapiErrorText"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/wapi_element_margin"
        android:layout_below="@+id/register_btn"/>


</RelativeLayout>
